--- a/src/main/webapp/script/prioridad/help.xhtml
+++ b/src/main/webapp/script/prioridad/help.xhtml
@@ -9,7 +9,7 @@
     
       <p:outputPanel>
 
-                    <p>Use esta configuracion para definir Niveles de Prioridad de casos, como por Ejemplo:</p>
+                    <p>Use esta configuracion para definir Niveles de Prioridad de casos y el tiempo para responder, como por Ejemplo:</p>
                     <h3>Nivel de gravedad 1 (Prioridad Máxima)</h3>
 
                     <ul>
