--- a/src/main/webapp/script/prioridad/List.xhtml
+++ b/src/main/webapp/script/prioridad/List.xhtml
@@ -4,8 +4,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:go="http://java.sun.com/jsf/composite/go">
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/script/template_inbox.xhtml">
         <ui:define name="title">
@@ -15,16 +14,10 @@
 
             <ui:include src="help.xhtml"/>
 
-
         </ui:define>
         <ui:define name="body">
             <h:form id="form">
-
-                <go:filterView controllerMBean="#{prioridadController}" filterHelper="#{prioridadController.filterHelper}" 
-                               vistaControllerBackOutcome="/script/prioridad/List"/>
-
                 <h:panelGroup>
-
                     <p:dataTable id="tabla" widgetVar="PrioridadTable" var="item" value="#{prioridadController.items}" 
                                  rowKey="#{item.idPrioridad}"
                                  selection="#{prioridadController.selectedItems}"
